--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
   <groupId>org.example</groupId>
   <artifactId>jsp-practice</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
+    <version>1.0-SNAPSHOT</version>
   <name>jsp-practice Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
